--- a/files/29_01_2023_00_15.html
+++ b/files/29_01_2023_00_15.html
@@ -1,4 +1,4 @@
-<html><head><title>Перелік вимкнень по обраному населеному пункту</title></head><body bgcolor="#F3F3F3">
+<html><link type="text/css" rel="stylesheet" id="dark-mode-custom-link"><link type="text/css" rel="stylesheet" id="dark-mode-general-link"><style lang="en" type="text/css" id="dark-mode-custom-style"></style><style lang="en" type="text/css" id="dark-mode-native-style"></style><style lang="en" type="text/css" id="dark-mode-native-sheet"></style><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Перелік вимкнень по обраному населеному пункту</title></head><body bgcolor="#F3F3F3">
 <div id="top"></div>
 <div class="tableCity">
 <hr>
